# OmniConvert

./: README.md  index.html  package-lock.json  package.json
.claude/skills/: omniconvert-dev.md
public/locales/en/: translation.json
public/locales/fr/: translation.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/layout/: Sidebar.tsx
src/components/shared/: DropZone.tsx  FileCard.tsx
src/i18n/: i18n.ts
src/lib/: conversionMatrix.ts  formats.ts  pdfRenderer.ts
src/pages/: ConverterPage.tsx  OcrPage.tsx  PdfMergePage.tsx  PdfSignaturePage.tsx  PdfToolkitPage.tsx  VideoToolsPage.tsx
src/stores/: appStore.ts
src/types/: conversion.ts  ocr.ts  pdf.ts
