[package]
name = "tauri-app"
version = "0.1.0"
description = "OmniConvert - Universal file converter"
authors = ["3WVKV"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
lopdf = "0.35"
base64 = "0.22"
csv = "1.3"
zip = "2"
tar = "0.4"
flate2 = "1"
